[package]
name = "pallet-template-runtime-api"
version = "2.0.0"
authors = ["Andrew Skurlatov <a.skurlatov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-api = { version = '2.0.0', default-features = false}

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["std"]
std = [
    "sp-api/std",
]